[package]
name = "tgrpc"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
prost = "0.13.5"
threshold = { path = "../threshold" }
tonic = "0.13.0"
tokio = { version = "1.45.0", features = ["full"] }
serde_yaml = "0.9.34"
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"
