[package]
name = "threshold"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = "1.0.219"
threshold_crypto = { git = "https://github.com/poanetwork/threshold_crypto" }
thiserror = "2.0.12"
serde_json = "1.0.140"
tracing = "0.1.41"
hex = "0.4.3"
rand = "0.7.3"
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full"], optional = true }
tracing-subscriber = "0.3.19"

[features]
tokio-runtime = ["dep:tokio"]
